uwsgi ini erstellt

--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -1,2 +1,9 @@
 [uwsgi]
-plugins = python3
+chdir = /home/jules/project/SE_Projekt_2021/src
+module = wsgi:app
+
+plugin = python3
+virtualenv = /home/jules/project/SE_Projekt_2021
+
+master = true
+socket = /tmp/app.sock
